[gd_scene load_steps=13 format=3 uid="uid://bkgu38wfxp4w7"]

[ext_resource type="Shader" path="res://props/flag/flag.gdshader" id="1"]
[ext_resource type="Script" path="res://props/flag/flag.gd" id="1_jmv4p"]
[ext_resource type="FontFile" uid="uid://cjwtskrde6shl" path="res://assets/fonts/montserrat_extra_bold.ttf" id="2_bod6l"]
[ext_resource type="Material" uid="uid://spijiqn1waam" path="res://props/flag/flag_material.tres" id="2_shneu"]
[ext_resource type="Material" uid="uid://doapumohf71x2" path="res://props/flag/flag_material_2.tres" id="3_xa20q"]

[sub_resource type="FastNoiseLite" id="1"]

[sub_resource type="NoiseTexture2D" id="2"]
seamless = true
noise = SubResource("1")

[sub_resource type="ShaderMaterial" id="3"]
render_priority = 0
shader = ExtResource("1")
shader_parameter/wave_size = 1.0
shader_parameter/face_distortion = 0.5
shader_parameter/time_scale = Vector2(0.3, 0)
shader_parameter/uv_offset_scale = Vector2(-0.2, -0.1)
shader_parameter/uv_offset_texture = SubResource("2")

[sub_resource type="PlaneMesh" id="4"]
material = SubResource("3")
size = Vector2(3.2, 2)
subdivide_width = 32
subdivide_depth = 32

[sub_resource type="StandardMaterial3D" id="5"]
albedo_color = Color(0.709804, 0.713726, 0.760784, 1)
metallic = 0.56
metallic_specular = 0.24
roughness = 0.63

[sub_resource type="CylinderMesh" id="6"]
material = SubResource("5")
top_radius = 0.1
bottom_radius = 0.1
height = 4.105

[sub_resource type="SphereShape3D" id="SphereShape3D_agi8s"]
radius = 10.0

[node name="Flag" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79311, 0)
script = ExtResource("1_jmv4p")
material_1 = ExtResource("2_shneu")
material_2 = ExtResource("3_xa20q")

[node name="Flag" type="MeshInstance3D" parent="."]
transform = Transform3D(1.2, 0, 0, 0, -1.95505e-07, -1.2, 0, 1, -1.62921e-07, 0.337505, 4.25, 0)
mesh = SubResource("4")

[node name="Pole" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.8, 0, 0, 0, 1, -1.6, 1.82459, 0)
mesh = SubResource("6")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 0)
pixel_size = 0.01
billboard = 2
text = "CHECKPOINT"
font = ExtResource("2_bod6l")
font_size = 80

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_agi8s")

[node name="VisibilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="VisibilityTimer" to="." method="_on_visibility_timer_timeout"]
